Simple design- Adding boostrap using angular json

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<p>This is the content from app component</p>
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+      <span class="navbar-brand mb-0 h1">Smart Grocery</span>
+    </div>
+  </nav>
 <app-products></app-products>
