--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark color">
+<nav class="navbar navbar-dark bg-primary">
     <div class="container-fluid">
       <span class="navbar-brand mb-0 h1">Smart Grocery</span>
     </div>
