interpolation 2 - usage of interpolation

--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -18,18 +18,18 @@
                 <tbody>
                     <tr>
                         <th scope="row">1</th>
-                        <td>Rice</td>
+                        <td>{{firstProductItemName}}</td>
                         <td>White Basmathi Rice imported from pakistan</td>
                         <td>2022.01.20</td>
-                        <td>500</td>
-                        <td>400</td>
+                        <td>{{2*148}}</td>
+                        <td>{{getPriceofRice()}}</td>
                     </tr>
                     <tr>
                         <th scope="row">2</th>
                         <td>Flour</td>
                         <td>Super FIne Whole grain general Purpose flour</td>
                         <td>2022.01.20</td>
-                        <td>50</td>
+                        <td>{{50}}</td>
                         <td>190</td>
                     </tr>
                     <tr>
