custom pipe creation

--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -21,14 +21,15 @@
                     <tr *ngFor="let product of products let i = index" (click)="selectProduct(i)" [ngClass]="rowIndex == i ? 'active' : ''">
                         <td>{{product.productId}}</td>
                         <td>{{product.productName}}</td>
-                        <td>{{product.productDescription}}</td>
+                        <td>{{product.productDescription |contentLimiter}}</td>
                         <td>{{product.createdDate | date}}</td>
-                        <!-- <td>{{product.createdDate | date :"MM/dd/yy"}}</td> -->
+                        <td>{{product.quantity}}</td>
+                          <!-- <td>{{product.createdDate | date :"MM/dd/yy"}}</td> -->
                         <!-- <td>{{product.createdDate | date | uppercase}}</td> -->
                         <!-- <td>{{product.unitPrice |currency}}</td>
                         <td>{{product.unitPrice |currency:'EUR'}}</td> -->
                         <td>{{product.unitPrice |currency:'Rs.'}}</td>
-                        <td>{{product.quantity}}</td>
+                        
                         <td>  
                             <p *ngIf="product.quantity < 50">Low inventory </p>
                             <p *ngIf="product.quantity > 50">Suffiecient inventory level</p>
