product service - implementation

--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -21,7 +21,7 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let product of products let i = index" (click)="selectProduct(i)" [ngClass]="rowIndex == i ? 'active' : ''">
-                        <td>{{product.productId}}</td>
+                        <td>{{product.id}}</td>
                         <td>{{product.productName}}</td>
                         <td>{{product.productDescription |contentLimiter}}</td>
                         <td>{{product.createdDate | date}}</td>
