Added refresh button

--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -16,12 +16,6 @@ table tbody tr.active td{
     background-color: rgb(199, 212, 219);
 }
 
-.btn-xs{
-    margin :1px;
-    border-radius:2px;
-
-}
-
 .product-header {
     display: flex;
     justify-content: space-between;
@@ -39,4 +33,9 @@ h1 {
 .btn-outline-primary:hover{
     background-color: cornflowerblue !important;;
     border-color: cornflowerblue !important;;
+}
+
+.icon{
+    color: rgb(99, 98, 98);
+    margin: 5px;
 }
