changed the row selection color

--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -39,3 +39,7 @@ h1 {
     color: rgb(99, 98, 98);
     margin: 5px;
 }
+
+table   tbody   tr.active  td{
+    background-color: #c8daf8 !important;
+}
