--- a/src/app/components/edit-product/edit-product.component.html
+++ b/src/app/components/edit-product/edit-product.component.html
@@ -1,1 +1,6 @@
-<p>edit-product works!</p>
+<div class="edit-product-section mt-3">
+    <div class="box-head">
+        <h1 class="pr-name">Add a new product</h1>
+   <div>
+</div>
+<p>product id - {{productId}}</p>
