--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -26,7 +26,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let product of products let i = index" (click)="selectProduct(i)" [ngClass]="rowIndex == i ? 'active' : ''">
+                    <tr *ngFor="let product of products let i = index" (click)="selectProduct(i , product)" [ngClass]="rowIndex == i ? 'active' : ''">
                         <td>{{product.id}}</td>
                         <td>{{product.productName}}</td>
                         <td>{{product.productDescription |contentLimiter}}</td>
@@ -49,7 +49,7 @@
         </section>
         <section class="col-md-5" *ngIf="showAddProduct || showEditProduct">
             <app-add-product *ngIf="showAddProduct"></app-add-product>
-            <app-edit-product *ngIf="showEditProduct"></app-edit-product>
+            <app-edit-product *ngIf="showEditProduct" [productId] = "selectedProductId"></app-edit-product>
         </section>
     </div>
 </div>
