comp interaction - child to parent through output

--- a/src/app/components/edit-product/edit-product.component.html
+++ b/src/app/components/edit-product/edit-product.component.html
@@ -1,6 +1,8 @@
 <div class="edit-product-section mt-3">
     <div class="box-head">
-        <h1 class="pr-name">Add a new product</h1>
-   <div>
+        <h1 class="pr-name">Edit product</h1>
+        <button type="button" class="btn btn-light" (click)="cancel()">X</button>
+  
+</div>
 </div>
 <p>product id - {{productId}}</p>
