--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -49,7 +49,7 @@
         </section>
         <section class="col-md-5" *ngIf="showAddProduct || showEditProduct">
             <app-add-product *ngIf="showAddProduct"></app-add-product>
-            <app-edit-product *ngIf="showEditProduct" [productId] = "selectedProductId"></app-edit-product>
+            <app-edit-product *ngIf="showEditProduct" [productId] = "selectedProductId" (cancelEditView) = closeEditView()></app-edit-product>
         </section>
     </div>
 </div>
