comp interaction-hide create product view

--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -9,8 +9,7 @@
                     </span>
                     <i *ngIf="isLoading" class="fa fa-refresh fa-spin fa-fw" aria-hidden="true"></i>
                 </h1>
-                <button *ngIf="!showAddProduct" type="button" class="btn btn-outline-primary" (click)="showAddProducts()">Add Product</button>
-                <button *ngIf="showAddProduct" type="button" class="btn btn-outline-primary" (click)="hideAddProducts()">Close Products</button>
+                <button type="button" class="btn btn-outline-primary" (click)="showAddProducts()">Add Product</button>
             </div>
             <table class="table">
                 <thead class="thead-light t-head">
@@ -48,8 +47,8 @@
             </table>
         </section>
         <section class="col-md-5" *ngIf="showAddProduct || showEditProduct">
-            <app-add-product *ngIf="showAddProduct"></app-add-product>
-            <app-edit-product *ngIf="showEditProduct" [productId] = "selectedProductId" (cancelEditView) = closeEditView()></app-edit-product>
+            <app-add-product *ngIf="showAddProduct" (cancelAddView) = "hideAddProducts()"></app-add-product>
+            <app-edit-product *ngIf="showEditProduct" [productId] = "selectedProductId" (cancelEditView) = "closeEditView()"></app-edit-product>
         </section>
     </div>
 </div>
