comp interaction - child to parent emit with data

--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -47,7 +47,7 @@
             </table>
         </section>
         <section class="col-md-5" *ngIf="showAddProduct || showEditProduct">
-            <app-add-product *ngIf="showAddProduct" (cancelAddView) = "hideAddProducts()"></app-add-product>
+            <app-add-product *ngIf="showAddProduct" (cancelAddView) = "hideAddProducts()" (productEvent) ="updateProductList($event)"></app-add-product>
             <app-edit-product *ngIf="showEditProduct" [productId] = "selectedProductId" (cancelEditView) = "closeEditView()"></app-edit-product>
         </section>
     </div>
